--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -104,7 +104,7 @@
         </div>
 
     <div class="row justify-content-center">
-      <input type="button" [routerLink]="['/preview']" class="btn btn-info" value="Preview" />
+      <input type="button" (click)="previewPage()" class="btn btn-info" value="Preview" />
     </div>
   </div>
 </form>
