--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,13 @@
 <form [formGroup]="billForm">
   <div class="container">
-    <h3 style="text-align: center;margin-bottom: 20px">Industry Name</h3>
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        <br>
+        <span style="font-family: sans-serif;font-weight: bold; font-size: 30px">SHREENATHJI CEMENT
+          INDUSTRIES</span>
+        <br>
+      </div>
+    </div>
     <div class="row">
       <div class="col-sm-2">
         <label for="invoiceNo">Invoice No. :</label>
