--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12 border text-center" style="border-bottom:none !important">
       <br>
-      <span style="font-family: fantasy; font-size: 35px;text-decoration: underline">SHREENATHJI CEMENT
+      <span style="font-family: sans-serif;font-weight: bold; font-size: 35px;text-decoration: underline">SHREENATHJI CEMENT
         INDUSTRIES</span>
       <span style="display:block" class="common"> Survey No. 44, Plot No. 6,7,8, HADAMTALA. Ta. Kotdasangani. Dist.
         :Rajkot (Gujarat) Mo. 99989 45722</span>
@@ -66,12 +66,12 @@
         <td class="amtProp">{{halfgstAmt | number : '1.2'}}</td>
       </tr>
       <tr>
-        <td colspan="5">GST Amount in Words:  {{this.totgstWord | titlecase}}</td>
+        <td colspan="5">GST Amount in Words:  <span class="italic" style="margin-left:10px">{{this.totgstWord | titlecase}}</span></td>
         <td>Round off</td>
         <td class="amtProp">{{this.roundOff | number : '1.2'}}</td>
       </tr>
       <tr>
-        <td colspan="5">Rupees in Words: {{this.grandTotWord | titlecase}}</td>
+        <td colspan="5">Rupees in Words: <span class="italic" style="margin-left:45px">{{this.grandTotWord | titlecase}}</span></td>
         <td>GRAND TOTAL</td>
         <td class="amtProp">{{this.grandTot | number : '1.2'}}</td>
       </tr>
@@ -84,7 +84,7 @@
       <pre>GSTIN No.      : 24ABHFS8289H1ZM</pre><br>
       <pre>Bank Name    : KOTAK MAHINDRA</pre><br>
       <pre>Bank A/c No.  : 1612988837</pre><br>
-      <pre>IFSC Code     : KKBK0002788</pre><br><br>
+      <pre>IFSC Code      : KKBK0002788</pre><br><br>
       <span>This Product is manufactured by mini cement plant</span>
     </div>
     <div class="col-sm-3 border text-center" style="border-bottom:none !important;border-top:none !important">
