css and other functionality changes

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -2,8 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12 text-center">
-        <br>
-        <span style="font-family: sans-serif;font-weight: bold; font-size: 30px">SHREENATHJI CEMENT
+        <span style="font-family: FredokaFamily;font-weight: bold; font-size: 30px">SHREENATHJI CEMENT
           INDUSTRIES</span>
         <br>
       </div>
@@ -58,6 +57,15 @@
 
     <div class="row">
       <div class="col-sm-2">
+        <label for="idMark">Identification Mark:</label>
+      </div>
+      <div class="col-sm-3">
+        <input type="text" class="form-control" formControlName="idMark" />
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-2">
         <label for="hsnCode">HSN Code:</label>
       </div>
       <div class="col-sm-3">
@@ -93,22 +101,40 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-2">
-          <label for="vehicleNo">Vehicle No.</label>
-        </div>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" formControlName="vehicleNo" />
-        </div>
+      <div class="col-sm-2">
+        <label for="igst">IGST %</label>
       </div>
+      <div class="col-sm-3">
+        <input type="number" class="form-control" formControlName="igst" />
+      </div>
+    </div>
 
-      <div class="row">
-          <div class="col-sm-2">
-            <label for="lrNo">L R No.</label>
-          </div>
-          <div class="col-sm-3">
-            <input type="text" class="form-control" formControlName="lrNo" />
-          </div>
-        </div>
+    <div class="row">
+      <div class="col-sm-2">
+        <label for="vehicleNo">Vehicle No.</label>
+      </div>
+      <div class="col-sm-3">
+        <input type="text" class="form-control" formControlName="vehicleNo" />
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-2">
+        <label for="dispatch">Dispatch Through</label>
+      </div>
+      <div class="col-sm-3">
+        <input type="text" class="form-control" formControlName="dispatch" />
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-2">
+        <label for="mobile">Mobile No.</label>
+      </div>
+      <div class="col-sm-3">
+        <input type="text" class="form-control" formControlName="mobile" />
+      </div>
+    </div>
 
     <div class="row justify-content-center">
       <input type="button" (click)="previewPage()" class="btn btn-info" value="Preview" />
