--- a/src/app/preview/preview.component.css
+++ b/src/app/preview/preview.component.css
@@ -3,16 +3,22 @@ table, th, td {
   }
 
 td{
-    height: 40px;
+    height: 50px;
+}
+
+th{
+    text-align: center;
 }
 
 .rowProp {
-    height : 400px;
+    height : 300px;
     vertical-align: top;
+    text-align: center;
+    font-size : 24px;
+    font-weight: bold;
 }
 
 .amtProp{
-    vertical-align: top;
     text-align: right;
 }
 
