--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -58,6 +58,15 @@
     </div>
 
     <div class="row">
+        <div class="col-sm-2">
+          <label for="custCity">Customer City:</label>
+        </div>
+        <div class="col-sm-3">
+          <input type="text" class="form-control" formControlName="custCity" />
+        </div>
+    </div>
+
+    <div class="row">
       <div class="col-sm-2">
         <label for="custState">Customer State:</label>
       </div>
